--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile project (':library:Android-Universal-Image-Loader')
+
+    compile 'org.litepal.android:core:1.3.1'
 }
