--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile project (':library:Android-Universal-Image-Loader')
 
     compile 'org.litepal.android:core:1.3.1'
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
