--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
 
     compile 'org.litepal.android:core:1.3.1'
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.alibaba:fastjson:1.1.46'
 }
