--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,20 @@ android {
     }
 }
 
+//应用 Bugtags 插件
+apply plugin: 'com.bugtags.library.plugin'
+
+//Bugtags 插件配置
+bugtags {
+    //自动上传符号表功能配置
+    appKey "d8c103ffa7d787b7fa5f8297735b65de"  //这里是你的 appKey
+    appSecret "bfbd92cbac86557f3774ad2db4c355fa"    //这里是你的 appSecret，管理员在设置页可以查看
+    mappingUploadEnabled true
+
+    //网络跟踪功能配置(企业版)
+    trackingNetworkEnabled true
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
@@ -28,4 +42,6 @@ dependencies {
     compile 'org.litepal.android:core:1.3.1'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.alibaba:fastjson:1.1.46'
+
+    compile 'com.bugtags.library:bugtags-lib:latest.integration'
 }
